--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* General styles */
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Open sans', 'Arial', sans-serif;
   background-color: #f4f4f4;
 }
 
