--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -6,11 +6,27 @@
   padding: 1rem;
 }
 
-.likelihood {
-  width: 100%;
-  margin-inline: auto;
+.heading {
+  background-color: #fff;
+  margin: -1rem;
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  padding-inline: 2rem;
+  -webkit-box-shadow: 0px 6px 12px 2px rgba(0,0,0,0.17);
+-moz-box-shadow: 0px 6px 12px 2px rgba(0,0,0,0.17);
+box-shadow: 0px 6px 12px 2px rgba(0,0,0,0.17);
 }
 
-.intensity {
-  width: 100%;
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card {
+  background-color: #fff;
+  border: 1px solid gray;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-bottom: 2rem;
 }
